--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
 <div class="container">
 <div class="main">
-<img src="techlance.png" height=75 width=75 />
+<img src="techlance-logo.png" height=75 width=75 />
 <h2>Verify Techlance Employee</h2>
 <form id="form_id" method="post" name="myform">
 <label>Employee ID:</label>
